# WoW-Economy-Forecaster

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LESSONS.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cloud-snapshot.yml  dependabot-automerge.yml
cloud-trigger/: README.md  worker.js  wrangler.toml
config/: default.toml  sources.toml
config/events/: event_import_template.csv  midnight_events_example.csv  tww_event_impacts.json  tww_events.json
dashboard/: app.py  data_loader.py  requirements.txt
docs/: ROADMAP.md  cloud-capture.md  db-backup.md  events.md  governance.md  postmortem-2026-04-lock-outage.md
learning/: README.md  curriculum.toml
learning/banks/: m06.toml
learning/labs/: lab-01-purge-embargo.md
learning/modules/: m06-splitting-time-series.md
notebooks/: 01_eda_and_data_exploration.ipynb  02_model_development.ipynb  03_backtest_and_evaluation.ipynb
scripts/: run_backup.bat  run_daily.bat  run_healthcheck.bat  run_hourly.bat  run_silent.vbs  setup_tasks.bat
tests/: conftest.py  test_cloud_fetch.py  test_config.py
tests/test_backtest/: test_metrics.py  test_models.py  test_splits.py
tests/test_backup/: test_durable_backup.py
tests/test_cli/: conftest.py  test_check_data_health.py  test_cli_smoke.py  test_learn_cli.py  test_sync_snapshots_cli.py
tests/test_dashboard/: test_data_loader.py
tests/test_db/: test_cloud_sync_queries.py  test_migration_0005.py  test_migration_0009.py  test_repositories.py  test_rollup.py  test_schema.py
tests/test_events/: test_seed_loader.py
tests/test_features/: conftest.py  test_archetype_features.py  test_dataset_builder_preflight.py  test_lag_rolling.py  test_no_leakage.py  test_quality.py
tests/test_governance/: test_freshness.py  test_models.py  test_preflight.py  test_pruner.py  test_registry.py
tests/test_ingestion/: test_cloud_sync.py  test_event_csv.py  test_persistence.py  test_snapshot.py
tests/test_learning/: conftest.py  test_bank_integrity.py  test_loader.py  test_scheduler.py  test_session.py  test_store.py
tests/test_ml/: test_cold_start.py  test_feature_selector.py  test_lgbm_model.py  test_predictor.py
tests/test_models/: test_archetype_models.py  test_event_models.py  test_forecast_models.py  test_market_models.py
tests/test_monitoring/: __init__.py  test_adaptive.py  test_drift.py  test_orchestrator.py
tests/test_pipeline/: test_forecast_freshness.py  test_item_forecasts.py  test_normalize.py  test_pipeline_interfaces.py
tests/test_recipes/: test_margin_calculator.py  test_recipe_repo.py  test_recipe_seeder.py
tests/test_recommendations/: test_crafting_advisor.py  test_item_overlay.py  test_ranker.py  test_scorer.py
tests/test_reporting/: test_bi_export.py  test_export.py  test_formatters.py  test_health.py  test_reader.py  test_tsm_export.py
tests/test_scheduler/: test_scheduler.py
tests/test_scripts/: test_run_backup.py  test_run_daily.py  test_run_healthcheck.py  test_run_hourly.py  test_setup_tasks.py
tests/test_taxonomy/: test_archetype_taxonomy.py  test_event_taxonomy.py
tests/test_viz/: test_charts.py  test_data_queries.py  test_theme.py  test_utils.py
wow_forecaster/: __init__.py  cli.py  config.py  scheduler.py
wow_forecaster/backtest/: __init__.py  evaluator.py  metrics.py  models.py  reporter.py  slices.py  splits.py
wow_forecaster/backup/: __init__.py  durable_backup.py
wow_forecaster/db/: __init__.py  connection.py  migrations.py  rollup.py  schema.py
wow_forecaster/events/: __init__.py  seed_loader.py
wow_forecaster/features/: __init__.py  archetype_features.py  daily_agg.py  dataset_builder.py  event_features.py  lag_rolling.py  quality.py  registry.py
wow_forecaster/governance/: __init__.py  freshness.py  models.py  preflight.py  pruner.py  registry.py  reporter.py
wow_forecaster/ingestion/: __init__.py  auctionator_importer.py  blizzard_client.py  blizzard_news_client.py  cloud_fetch.py  cloud_sync.py  event_csv.py  item_bootstrapper.py  snapshot.py  undermine_client.py
(+83 files in other folders)
