[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wow-economy-forecaster"
version = "0.1.0"
description = "Local-first WoW auction house economy forecasting and research system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "pyarrow>=16.0",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "httpx>=0.27",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
# Optional Streamlit dashboard.
# Install: pip install -e ".[dashboard]"
# Run:     streamlit run dashboard/app.py
dashboard = [
    "streamlit>=1.35",
    "pandas>=2.0",
]

[project.scripts]
wow-forecaster = "wow_forecaster.cli:app"
wowfc = "wow_forecaster.cli:app"

[tool.setuptools.packages.find]
where = ["."]
# dashboard/ is intentionally excluded — it is not part of the installable package.
include = ["wow_forecaster*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["ANN"]
