[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wow-economy-forecaster"
version = "2.10.3"
description = "Local-first WoW auction house economy forecasting and research system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "pyarrow>=16.0",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "httpx>=0.27",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # Exact pin: linter rule sets advance with releases, so a floating bound
    # makes CI stricter with zero code changes (issue #44). Dependabot opens
    # a monthly PR when a new ruff releases; bump happens there, gated by CI.
    "ruff==0.16.0",
]
# Cloud snapshot fetcher upload dependency (see docs/cloud-capture.md).
# The GitHub Actions workflow installs the package with --no-deps plus httpx
# and boto3 directly; this group exists for local runs and testing.
cloud = [
    "boto3>=1.34",
]
# Visualization charts (matplotlib, seaborn, Plotly).
# Install: pip install -e ".[viz]"
viz = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "kaleido>=0.2",
    "pandas>=2.0",
]
# Optional Streamlit dashboard (includes viz deps).
# Install: pip install -e ".[dashboard]"
# Run:     streamlit run dashboard/app.py
dashboard = [
    "streamlit>=1.35",
    "wow-economy-forecaster[viz]",
]

[project.scripts]
wow-forecaster = "wow_forecaster.cli:app"
wowfc = "wow_forecaster.cli:app"

[tool.setuptools.packages.find]
where = ["."]
# dashboard/ is intentionally excluded — it is not part of the installable package.
include = ["wow_forecaster*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
# UP042: converting (str, Enum) classes to StrEnum changes str(member) output;
# CraftingWindow, DriftLevel, and FreshnessStatus values persist to DB and CSV,
# so the rewrite would silently change stored data. Deliberate keep.
ignore = ["ANN", "UP042"]

[tool.ruff.lint.per-file-ignores]
# typer.Option calls in argument defaults are the Typer API, not a bug.
"wow_forecaster/cli.py" = ["B008"]
# X, X_train, X_val follow the sklearn naming convention for feature matrices.
"wow_forecaster/ml/lgbm_model.py" = ["N803", "N806"]
